; ModuleID = '/home/carl/AnghaBench/freebsd/sys/contrib/ncsw/Peripherals/FM/Rtc/extr_fman_rtc.c_fman_rtc_check_and_clear_event.c'
source_filename = "/home/carl/AnghaBench/freebsd/sys/contrib/ncsw/Peripherals/FM/Rtc/extr_fman_rtc.c_fman_rtc_check_and_clear_event.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.rtc_regs = type { i32, i32 }

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @fman_rtc_check_and_clear_event(%struct.rtc_regs* %0) #0 {
  %2 = alloca %struct.rtc_regs*, align 8
  %3 = alloca i32, align 4
  store %struct.rtc_regs* %0, %struct.rtc_regs** %2, align 8
  %4 = load %struct.rtc_regs*, %struct.rtc_regs** %2, align 8
  %5 = getelementptr inbounds %struct.rtc_regs, %struct.rtc_regs* %4, i32 0, i32 0
  %6 = call i32 @ioread32be(i32* %5)
  store i32 %6, i32* %3, align 4
  %7 = load %struct.rtc_regs*, %struct.rtc_regs** %2, align 8
  %8 = getelementptr inbounds %struct.rtc_regs, %struct.rtc_regs* %7, i32 0, i32 1
  %9 = call i32 @ioread32be(i32* %8)
  %10 = load i32, i32* %3, align 4
  %11 = and i32 %10, %9
  store i32 %11, i32* %3, align 4
  %12 = load i32, i32* %3, align 4
  %13 = icmp ne i32 %12, 0
  br i1 %13, label %14, label %19

14:                                               ; preds = %1
  %15 = load i32, i32* %3, align 4
  %16 = load %struct.rtc_regs*, %struct.rtc_regs** %2, align 8
  %17 = getelementptr inbounds %struct.rtc_regs, %struct.rtc_regs* %16, i32 0, i32 0
  %18 = call i32 @iowrite32be(i32 %15, i32* %17)
  br label %19

19:                                               ; preds = %14, %1
  %20 = load i32, i32* %3, align 4
  ret i32 %20
}

declare dso_local i32 @ioread32be(i32*) #1

declare dso_local i32 @iowrite32be(i32, i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
